argocd/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   konghq.com/strip-path: "true"
  name: argocd-ingress
  namespace: argocd
spec:
  ingressClassName: kong
  rules:
    - host: hml-id.cpqd.com.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server
                port:
                  number: 80
